# kime

./: Cargo.toml
engine/tests/: dubeolsik.rs
gtk3/src/: lib.rs
src/daemon/indicator/: Cargo.toml
src/daemon/indicator/src/: main.rs
src/daemon/kimed/: Cargo.toml
src/daemon/kimed/src/: main.rs
src/daemon/types/: Cargo.toml
src/daemon/types/src/: lib.rs
src/daemon/window/: Cargo.toml
src/engine/capi/src/: lib.rs
src/engine/cffi/: kime_engine.h
src/engine/cffi/src/: ffi.rs  lib.rs
src/engine/core/src/: config.rs  input_result.rs  lib.rs
src/frontends/wayland/src/: main.rs
src/frontends/xim/: Cargo.toml
src/frontends/xim/src/: handler.rs  main.rs
