[package]
name = "kimed"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[dependencies]
kimed-types = { path = "../types" }
kime-version = { path = "../../version" }

daemonize = "0.4.1"
log = "0.4.14"
anyhow = "1.0.38"
simplelog = "0.9.0"
structopt = "0.3.21"
tokio = { version = "1.1.1", features = ["net", "rt", "io-util", "parking_lot", "sync"] }
